sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var lgr=getNombreValeurs
  for (i <- 1 to lgr-1) {
    var v=getValeur(i)
    for (j <- 1 to i-1) {
      if (plusPetit(v,i-j)) {
        copie(i-j,i-j+1)
        }
    }
    setValeur(i-j,v)
  }
}